# a-python-project

./: .gitignore
my_kalculator/: .pylintrc  .tox  README.md  pyproject.toml  tox.ini
my_kalculator/src/kalc/: __init__.py  calc.py  version.py
my_kalculator/tests/: add2numbers_test.py  divide2numbers_test.py  multiply2numbers_test.py  subtract2numbers_test.py
